# avro.py

./: .flake8  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  Makefile  NOTICE  README.md  REFERENCES.md  coverage.txt  dev-requirements.txt  prev-pyproject.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: code-checks.yml  codestyle.yml  formatting.yml  linting.yml  nightly.yml  pages.yml  publish-on-pypi.yml  release.yml  stylecheck.yml  testsuite.yml  unit-tests.yml
.zed/: tasks.json
avro/: __init__.py  cli.py  config.py  main.py  python_dict_tool.py
avro/core/: __init__.py  count.py  processor.py  validate.py
avro/resources/: __init__.py  avrodict.json  avrodict.py  dictionary.py
avro/utils/: __init__.py  config.py  count.py  processor.py  validate.py
docs/: avro.core.rst  avro.resources.rst  avro.rst  conf.py  index.rst  modules.rst
examples/: async.py  basic.py  simple.py
src/: bijoy.rs  dictionary.rs  lib.rs  parser.rs
src/avro/: __init__.py  main.py
src/avro/core/: __init__.py  config.py  count.py  objects.py  processor.py  validate.py
src/avro/resources/: __init__.py  dictionary.py
tests/: requirements.txt  test_main.py  test_main_async.py  test_utils_count.py  test_utils_validate.py
