[package]
name = "avro_rs"
version = "2025.8.11"
edition = "2021"
authors = ["HitBlast <hitblastlive@gmail.com>"]
description = "Rust implementation of Avro Phonetic for Bengali text processing"
license = "MIT"

[lib]
name = "avro_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[tool.maturin]
features = ["pyo3/extension-module"]
