# SPDX-License-Identifier: MIT


# uv-specific things
[project]
name = "avro-py"
version = "2024.12.5"
description = "A modern Pythonic implementation of Avro Phonetic."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "HitBlast", email = "hitblastlive@gmail.com" }]
keywords = [
    'python',
    'phonetics',
    'avro',
    'avro phonetic',
    'bangla',
    'bengali',
    'bengali phonetics',
    'transliteration',
]
classifiers = [
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = []


# project links
[project.urls]
Homepage = "https://pypi.org/project/avro-py"
Documentation = "https://hitblast.github.io/avro.py"
Repository = "https://github.com/hitblast/avro.py"


# dependency groups
[dependency-groups]
dev = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3", "ruff>=0.7.1"]
docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]


# ruff-specific things
[tool.ruff]
target-version = "py39"
line-length = 79
exclude = ["venv"]

[tool.ruff.lint.per-file-ignores]
"src/avro/__init__.py" = ["F403"]
"src/avro/resources/__init__.py" = ["F403"]
"src/avro/resources/dictionary.py" = ["F601"]
"src/avro/utils/processor.py" = ["E741"]
"tests/test_main.py" = ["F601"]


# build system specification
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/avro"]

[tool.hatch.build.targets.wheel]
packages = ["src/avro"]
