[project]
name = "avro-py"
version = "2025.11.1"
description = "A modern Pythonic implementation of Avro Phonetic."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Anindya Shiddhartha", email = "hitblastlive@gmail.com" }]
keywords = [
    'python',
    'phonetics',
    'avro',
    'avro phonetic',
    'bangla',
    'bengali',
    'bengali phonetics',
    'transliteration',
]
classifiers = [
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
    'License :: Free for non-commercial use',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = []


[project.urls]
Homepage = "https://pypi.org/project/avro-py"
Documentation = "https://hitblast.github.io/avro.py"
Repository = "https://github.com/hitblast/avro.py"


[dependency-groups]
dev = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]
docs = ["pdoc3>=0.11.1", "setuptools>=75.3.0"]


[tool.ruff]
target-version = "py310"
line-length = 79
exclude = [".venv"]

[tool.ruff.lint.per-file-ignores]
"src/avro/__init__.py" = ["F403"]
"src/avro/resources/__init__.py" = ["F403"]
"src/avro/resources/dictionary.py" = ["F601"]
"src/avro/utils/processor.py" = ["E741"]
"tests/test_main.py" = ["F601"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/avro"]

[tool.hatch.build.targets.wheel]
packages = ["src/avro"]
